# open-tracer

./: Cargo.toml  README.md
echo/: Cargo.toml  build.rs
echo-common/src/: lib.rs
echo-ebpf/: Cargo.toml
echo-ebpf/src/: main.rs
echo/proto/: kernel_tracer.proto
echo/src/: file_utils.rs  kernel_version.rs  main.rs  metrics.rs  server.rs  unix.rs
echo/tests/: HOWTO  integration_tests.rs  load_tests.sh
xtask/: Cargo.toml
xtask/src/: build_ebpf.rs
