[package]
name = "xtask"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = {version = "0.3", default-features = false }
anyhow = "1"
walkdir = "2.3.2"
regex = "1.5"
echo-common = { path = "../echo-common" }

[env]
MAX_KERNEL_VERSION="4.14"
